--- a/templates/frontend/base.html
+++ b/templates/frontend/base.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="{% static 'lib/bootstrap/css/bootstrap.min.css' %}">
+    <link
+      rel="stylesheet"
+      href="{% static 'lib/bootstrap/css/bootstrap.min.css' %}"
+    />
+    <script src="{% static 'lib/jquery/jquery-3.7.1.min.js'%}"></script>
   </head>
   <body>
     {% block content %} {% endblock %}
-    <script src="{% static 'lib/jquery/jquery-3.7.1.min.js'%}"></script>
+
     <script src="{% static 'lib/bootstrap/js/bootstrap.min.js'%}"></script>
-  </body>s
+  </body>
 </html>
